--- a/package.json
+++ b/package.json
@@ -27,12 +27,13 @@
     "svelte": "^3.0.0",
     "svelte-check": "^2.0.0",
     "svelte-jester": "^1.7.0",
-    "svelte-preprocess": "^4.0.0",
+    "svelte-preprocess": "^4.7.4",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
   },
   "dependencies": {
     "carbon-components-svelte": "^0.42.2",
+    "sass": "^1.37.0",
     "sirv-cli": "^1.0.0",
     "svelte-routing": "^1.6.0"
   }
