--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "dependencies": {
     "carbon-components-svelte": "^0.42.2",
+    "cypress": "^8.1.0",
     "sass": "^1.37.0",
     "sirv-cli": "^1.0.0",
     "svelte-routing": "^1.6.0"
