--- a/package.json
+++ b/package.json
@@ -32,7 +32,9 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "carbon-components-svelte": "^0.42.2",
+    "carbon-icons-svelte": "^10.36.0",
     "cypress": "^8.1.0",
     "sass": "^1.37.0",
     "sirv-cli": "^1.0.0",
