--- a/package.json
+++ b/package.json
@@ -12,13 +12,19 @@
   "devDependencies": {
     "@babel/core": "^7.14.8",
     "@babel/preset-env": "^7.14.8",
+    "@babel/preset-typescript": "^7.15.0",
+    "@bahmutov/cy-rollup": "^2.0.0",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
+    "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/svelte": "^3.0.3",
     "@tsconfig/svelte": "^2.0.0",
+    "@types/jest": "^26.0.24",
     "babel-jest": "^27.0.6",
+    "cypress-svelte-unit-test": "^3.3.2",
     "jest": "^27.0.6",
+    "jsdom": "^16.7.0",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -28,14 +34,18 @@
     "svelte-check": "^2.0.0",
     "svelte-jester": "^1.7.0",
     "svelte-preprocess": "^4.7.4",
+    "ts-jest": "^27.0.4",
     "tslib": "^2.0.0",
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "@pyoner/svelte-ts-preprocess": "^1.3.0",
     "axios": "^0.21.1",
     "carbon-components-svelte": "^0.42.2",
     "carbon-icons-svelte": "^10.36.0",
     "cypress": "^8.1.0",
+    "prettier": "^2.3.2",
+    "prettier-plugin-svelte": "^2.3.1",
     "sass": "^1.37.0",
     "sirv-cli": "^1.0.0",
     "svelte-routing": "^1.6.0"
