--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "@pyoner/svelte-ts-preprocess": "^1.3.0",
+    "@rollup/plugin-json": "^4.1.0",
     "axios": "^0.21.1",
     "carbon-components-svelte": "^0.42.2",
     "carbon-icons-svelte": "^10.36.0",
@@ -48,6 +49,7 @@
     "prettier-plugin-svelte": "^2.3.1",
     "sass": "^1.37.0",
     "sirv-cli": "^1.0.0",
-    "svelte-routing": "^1.6.0"
+    "svelte-routing": "^1.6.0",
+    "thai-address-database": "^0.0.29"
   }
 }
