--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "rollup -c -w",
     "start": "sirv public --no-clear",
     "check": "svelte-check --tsconfig ./tsconfig.json",
-    "test": "jest"
+    "test": "jest",
+    "format": "prettier --write --plugin-search-dir=. src/**/*.svelte"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
@@ -25,6 +26,8 @@
     "cypress-svelte-unit-test": "^3.3.2",
     "jest": "^27.0.6",
     "jsdom": "^16.7.0",
+    "prettier": "^2.3.2",
+    "prettier-plugin-svelte": "^2.3.1",
     "rollup": "^2.3.4",
     "rollup-plugin-css-only": "^3.1.0",
     "rollup-plugin-livereload": "^2.0.0",
@@ -45,8 +48,6 @@
     "carbon-components-svelte": "^0.42.2",
     "carbon-icons-svelte": "^10.36.0",
     "cypress": "^8.1.0",
-    "prettier": "^2.3.2",
-    "prettier-plugin-svelte": "^2.3.1",
     "sass": "^1.37.0",
     "sirv-cli": "^1.0.0",
     "svelte-routing": "^1.6.0",
