--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "start": "sirv public --no-clear",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "test": "jest",
-    "format": "prettier --write --plugin-search-dir=. src/**/*.svelte"
+    "format": "prettier --write --plugin-search-dir=. src/**/*.{svelte,ts}",
+    "format-check": "prettier --check src/**/*.{svelte,ts}",
+    "lint": "eslint -c ./.eslintrc.js src/",
+    "lint-fix": "eslint --fix -c ./.eslintrc.js src/"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
@@ -22,8 +25,12 @@
     "@testing-library/svelte": "^3.0.3",
     "@tsconfig/svelte": "^2.0.0",
     "@types/jest": "^26.0.24",
+    "@typescript-eslint/eslint-plugin": "^4.29.1",
+    "@typescript-eslint/parser": "^4.29.1",
     "babel-jest": "^27.0.6",
     "cypress-svelte-unit-test": "^3.3.2",
+    "eslint": "^7.32.0",
+    "eslint-plugin-svelte3": "^3.2.0",
     "jest": "^27.0.6",
     "jsdom": "^16.7.0",
     "prettier": "^2.3.2",
