--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "rollup -c",
     "dev": "rollup -c -w",
-    "start": "sirv public --no-clear",
+    "start": "sirv public --single --dev --no-clear",
     "check": "svelte-check --tsconfig ./tsconfig.json",
     "test": "jest",
     "format": "prettier --write --plugin-search-dir=. '{,!(node_modules)/**/}*.{ts,svelte}'",
