refactor: change wording for verify otp

--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "test": "jest",
     "format": "prettier --write --plugin-search-dir=. '{,!(node_modules)/**/}*.{ts,svelte}'",
     "format-check": "prettier --check **/*.{svelte,ts}",
-    "lint": "eslint -c ./.eslintrc.js src/",
-    "lint-fix": "eslint --fix -c ./.eslintrc.js src/"
+    "lint": "eslint -c ./.eslintrc.js ./src",
+    "lint-fix": "eslint --fix -c ./.eslintrc.js ./src"
   },
   "devDependencies": {
     "@babel/core": "^7.14.8",
