--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "@bahmutov/cy-rollup": "^2.0.0",
     "@rollup/plugin-commonjs": "^17.0.0",
     "@rollup/plugin-node-resolve": "^11.0.0",
+    "@rollup/plugin-replace": "^3.0.0",
     "@rollup/plugin-typescript": "^8.0.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/svelte": "^3.0.3",
     "@tsconfig/svelte": "^2.0.0",
     "@types/jest": "^26.0.24",
+    "@types/node": "^16.6.1",
     "@typescript-eslint/eslint-plugin": "^4.29.1",
     "@typescript-eslint/parser": "^4.29.1",
     "babel-jest": "^27.0.6",
@@ -52,6 +54,8 @@
   "dependencies": {
     "@pyoner/svelte-ts-preprocess": "^1.3.0",
     "@rollup/plugin-json": "^4.1.0",
+    "@sentry/browser": "^6.11.0",
+    "@sentry/tracing": "^6.11.0",
     "axios": "^0.21.1",
     "carbon-components-svelte": "^0.42.2",
     "carbon-icons-svelte": "^10.36.0",
