--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -31,4 +31,4 @@ jobs:
       - name: Tricker build
         env:
           CLOUDFLARE_PAGE_TRIGGER_DEPLOYMENT: ${{ secrets.CLOUDFLARE_PAGE_TRIGGER_DEPLOYMENT }}
-        run: curl -X POST "%CLOUDFLARE_PAGE_TRIGGER_DEPLOYMENT%"
+        run: curl -X POST "$CLOUDFLARE_PAGE_TRIGGER_DEPLOYMENT"
