refactor: format code

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,7 +28,7 @@ jobs:
       - name: Audit
         run: npm audit
       
-      - name: Tricker build
+      - name: Trigger build
         env:
           CLOUDFLARE_PAGE_TRIGGER_DEPLOYMENT: ${{ secrets.CLOUDFLARE_PAGE_TRIGGER_DEPLOYMENT }}
         run: curl -X POST "$CLOUDFLARE_PAGE_TRIGGER_DEPLOYMENT"
