--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -28,6 +28,15 @@ jobs:
       - name: Audit
         run: npm audit
       
+      - name: Create Sentry release
+        uses: getsentry/action-release@v1
+        env:
+          SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
+          SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
+          SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
+        with:
+          environment: production
+      
       - name: Trigger build
         env:
           CLOUDFLARE_PAGE_TRIGGER_DEPLOYMENT: ${{ secrets.CLOUDFLARE_PAGE_TRIGGER_DEPLOYMENT }}
