--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "sass": "^1.37.0",
     "sirv-cli": "^1.0.0",
     "thai-address-database": "^0.0.16",
-    "tinro": "^0.6.5"
+    "tinro": "^0.6.5",
+    "yup": "^0.32.9"
   }
 }
